--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,3 +4,17 @@
     font-family: Arial, sans-serif;
     box-sizing: border-box;
 }
+
+body {
+    background-color:beige;
+}
+
+.card {
+    width: 50%;
+    max-width: 470px;
+    background-color: linear-gradient(90deg, #059862, #7FFFD4);
+    margin: 100px auto 0;
+    border-radius: 20px;
+    padding: 20px 20px;
+    text-align: center;
+}
