--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -65,3 +65,15 @@ body {
 .humidity, .wind {
     font-size: 24px;
 }
+
+/* Header Styling */
+.header {
+    background: green;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+}
