--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,14 +9,17 @@ body {
     background-color:beige;
 }
 
+
+
 .card {
     width: 50%;
     max-width: 470px;
     background: linear-gradient(90deg, #059862, #7FFFD4);
-    margin: 100px auto 0;
+    margin: 0 auto;
     border-radius: 20px;
     padding: 20px 20px;
     text-align: center;
+    max-height: 400px;
 }
 
 /*Adjusting style of search div */
@@ -68,12 +71,25 @@ body {
 
 /* Header Styling */
 .header {
-    background: green;
+    background: rgba(0, 128, 0, 0.5); 
     width: 100%;
     height: 80px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    
+    margin: 0;
+    padding: 0;
+}
+
+
+/*Background for weather app */
+.weather-card-background {
+    background-image: url('../images/starry-night-sky.jpg');
+    background-size: cover;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+
 }
