--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color:beige;
+    background-image: url('../images/starry-night-sky.jpg');
 }
 
 
@@ -82,14 +82,12 @@ body {
     padding: 0;
 }
 
-
-/*Background for weather app */
-.weather-card-background {
-    background-image: url('../images/starry-night-sky.jpg');
-    background-size: cover;
-    width: 100%;
-    min-height: 100vh;
+/* Main Section */
+.main-section {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-
+    height: 500px;
+    width: 100%;
 }
